added a tiny bit of coloring to the page

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,3 +1,8 @@
 body {
-    background-color: whitesmoke;
+    !important;background-color: #F0A202;
+    !important;color: #0E1428;
 }
+a {
+    !important;color: #0E1428;
+}
+
